<resources>
    <string name="app_name">Vishwguru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spinner_title">Select Category</string>
    <string name="profile_name">Name</string>
    <string name="registrationfail">Registration  Failed..</string>
    <string name="mobile">Mobile no</string>
    <string name="adhar">Aadhar No.</string>
    <string name="select_category">Select Category</string>
    <string name="supplier_code">Supplier code</string>
    <string name="name">Name</string>
    <string name="place_of_unload">Place of unload</string>
    <string name="cross">Gross</string>
    <string name="tare">Tare</string>
    <string name="net">Net</string>
    <string name="remark">Remark</string>
    <string name="adharno">Adhar No.</string>
    <string name="mobileno">Mobile No.</string>
    <string name="licenceno">License No</string>
    <string name="weightbridge">Weight Bridge</string>
    <string name="name_of_transport">Name of transport</string>
    <string name="srno">Sr No.</string>
    <string name="nav_header_desc">Emp-1</string>
    <string name="nav_header_title">Imran Shaikh</string>
    <string name="nav_header_subtitle">7710881086</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">About us</string>
    <string name="menu_slideshow">Contact us</string>
    <string name="action_settings">Setting</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_vehicalinsurance">Vehical Insurance</string>
    <string name="menu_privacypolicy">Privacy policy</string>
    <string name="menu_orderhistory">Orderlist History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_newrequest">New Request</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_support">Support</string>
    <string name="menu_callcenter">Call Center</string>
    <string name="menu_changePassword">Change Password</string>
    <string name="error_msg">Sorry! Couldn\'t fetch list.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">No Request For You</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="entervalidmobileno">Enter Valid Mobile Number</string>
    <string name="entercpassword">Enter Confirm Password</string>
    <string name="entercpasswordvalidation">Enter Valid Confirm Password</string>
    <string name="enterpasswordvalidation">Enter Valid Password</string>
    <string name="enterconfirmpassword">Enter Confirm Password</string>
    <string name="oldnewpasswordnotmatch">Old and New Password Not Matched..</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email Id</string>
    <string name="loading">Please Wait</string>
    <string name="registrationdone">Registration  Done Successfully..</string>
    <string name="account_block">Account Block</string>
    <string name="enterusername">Enter Username</string>
    <string name="enteraddress">Enter Address</string>
    <string name="enterpassword">Enter Password</string>
    <string name="loginsuccess">Welcome </string>
    <string name="No">No</string>
    <string name="yes">Yes</string>
    <string name="logout_now">Do you want to logout ?</string>
    <string name="menu_share">Share</string>
    <string name="menu_history">Request History</string>
    <string name="change_passord">Change Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_record_found">No Record Found</string>
    <string name="profile_email">Email</string>
    <string name="alt_mobile">Alternate Mobile</string>
    <string name="profile_business">Business Name</string>
    <string name="profile_description">Shop Description</string>
    <string name="profile_address">Official Address</string>
    <string name="profile_pin_code">Pincode</string>
    <string name="profile_image">Profile Photo</string>
    <string name="profile_aadhar">Aadhar Card Photo</string>
    <string name="create_new_breakdown">Create New Request</string>
    <string name="create_new">No Request For You</string>
    <string name="profile_pan">Pan Card Photo</string>
    <string name="profile_main">Shop Act Photo</string>
    <string name="update_profile">Update Profile</string>
    <string name="userexist">User already exist..please try another mobile number</string>
    <string name="otp_verification">Enter OTP</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="city">Select District</string>
    <string name="contact_email">info@everoffer.in</string>
    <string name="contact_phone">+91-7770096444</string>
    <string name="contact_web">https://everoffer.in/</string>
    <string name="taluka">Select Taluka</string>
    <string name="state">Select State</string>
    <string name="enterstate">Enter State</string>
    <string name="entercity">Enter City</string>
    <string name="entertaluka">Enter Taluka</string>
    <string name="password_wrong">password wrong</string>
    <string name="user_does_not_exist">user does not exist</string>
    <string name="serverdown">server down</string>
    <string name="useralreadyexist">user already exist</string>
    <string name="please_wait">please wait</string>
    <string name="contact_address">address</string>
    <string name="Support">Call Center</string>
    <string name="Hi">Hi </string>
    <string name="menu_status">New Request</string>
    <string name="menu_ongoing">Ongoing Request</string>
    <string name="submit_bill">Submit</string>
    <string name="submit">Submit</string>
    <string name="hi">"Hi "</string>
    <string name="menu_vehicle">My Vehical</string>
    <string name="select_company">Enter Company</string>
    <string name="select_type">Enter Type</string>
    <string name="select_load">Enter Load</string>
    <string name="select_modal_years">Enter Model Year</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="vehicle_km_reading">Vehicle Km</string>
    <string name="insurance_expired_date">Insurance Exp Date</string>
    <string name="rc_expired_date">Rc Exp Date</string>
    <string name="vehicle_photo">Vehicle Pic</string>
    <string name="vehicle_insurance_photo">Insurance Pic</string>
    <string name="vehicle_rc_photo">Rc Pic</string>
    <string name="my_vehical">My Vehical</string>
    <string name="add_vehical">Add Vehical</string>
    <string name="change_password">change password</string>
    <string name="address">Supplier Address</string>
    <string name="vehical_no">Vehical No</string>
    <string name="driver_name">Driver Name</string>
    <string name="lr">LR</string>
</resources>